# usipipobot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  Dockerfile  FASE5_SUMMARY.md  INSTALL.md  ISSUE_258_RESOLUTION.md  QWEN.md  README.md  SECURITY_VULNERABILITIES_FIX.md  bot.sh  config.py  docker-compose.yml  docker.sh  ecosystem.config.js  example.env  install.sh  issues.txt  knowledge.md  main.py  manager.sh  mow10x.md  package-lock.json  package.json  pm2.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  structured.md  tracks.md  trondealer-api.skill  update_version.py  version.py  wg_server.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: android-ci.yml  ci.yml  codeql.yml  deploy.yml  docker.yml  manual-deploy.yml  performance.yml  qwen-dispatch.yml  qwen-invoke.yml  qwen-review.yml  qwen-scheduled-triage.yml  qwen-test-connection.yml  qwen-triage.yml  release.yml
android_app/: CHANGELOG.md  README.md  buildozer.spec  main.py  pyproject.toml  requirements-android.txt
android_app/.github/workflows/: android-ci.yml
android_app/assets/fonts/: README.md
android_app/assets/images/: README.md
android_app/src/: __init__.py  app.py  config.py
android_app/src/components/: __init__.py  data_progress_bar.py  neon_button.py  otp_input.py  qr_display.py  quick_action_button.py  skeleton_loader.py  status_badge.py  vpn_key_card.py
android_app/src/kv/: base.kv  components.kv  create_key.kv  create_key_success.kv  dashboard.kv  key_detail.kv  keys_list.kv  login.kv  otp.kv  splash.kv
android_app/src/screens/: __init__.py  create_key_screen.py  create_key_success_screen.py  dashboard_screen.py  key_detail_screen.py  keys_list_screen.py  login_screen.py  otp_screen.py  splash_screen.py
android_app/src/services/: api_client.py  auth_service.py  dashboard_service.py  keys_service.py
android_app/src/storage/: cache_storage.py  preferences_storage.py  secure_storage.py
android_app/src/utils/: logger.py
android_app/tests/: conftest.py  test_api_client.py  test_auth_service.py  test_cache_storage.py  test_dashboard_service.py  test_secure_storage.py
application/services/: achievement_service.py  admin_key_service.py  admin_server_service.py  admin_service.py  admin_stats_service.py  admin_user_service.py  ai_support_service.py  announcer_service.py  broadcast_service.py  consumption_billing_activation.py  consumption_billing_cycle.py  consumption_billing_dtos.py  consumption_billing_service.py  consumption_invoice_service.py  consumption_vpn_integration_service.py  crypto_payment_service.py  data_package_service.py  game_service.py  payment_service.py  referral_service.py  subscription_payment_service.py  subscription_service.py  support_service.py  task_service.py  ticket_notification_service.py  ticket_service.py  user_bonus_service.py  user_profile_service.py  vpn_infrastructure_service.py  vpn_service.py  wallet_management_service.py  wallet_pool_service.py  webhook_security_service.py
bot/: index.js
bot/bot/: bot.instance.js
bot/config/: constants.js  environment.js
bot/handlers/: admin.handler.js  auth.handler.js  info.handler.js  start.handler.js  vpn.handler.js
bot/middleware/: auth.middleware.js
bot/services/: notification.service.js  outline.service.js  systemJobs.service.js  userManager.service.js  wireguard.service.js
bot/utils/: formatters.js  keyboards.js  logger.js  markdown.js  messages.js
config/: Caddyfile
core/: lifespan.py
docs/: ADMIN.md  ADMIN_USERS_SHOP_GUIDE.md  ALEMBIC_GUIDE.md  APPFLOW.md  BOT_COMMANDS.md  CONFIGURATION.md  CRYPTO_PAYMENT_INT32_FIX.md  DATABASE_MIGRATION_GUIDE.md  GITHUB_ACTIONS.md  GROQ_API_GUIDE.md  HANDLERS_MIGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_GUIDE.md  KEYBOARD_MIGRATION_CHECKLIST.md  KEYBOARD_REFACTORING_GUIDE.md  KEYBOARD_REFACTORING_OVERVIEW.md  KEYBOARD_REFACTORING_SUMMARY.md  MESSAGES_EXAMPLES.md  MESSAGES_GUIDE.md  MESSAGES_MIGRATION.md  MESSAGES_REFACTORING_CHECKLIST.md  MESSAGES_REFACTORING_COMPLETE.md  MESSAGES_REFACTORING_OVERVIEW.md  MESSAGES_REFACTORING_SUMMARY.md  MIGRATION_CONSOLIDATION.md  MINI_APP_PAYMENT_FIX.md  MINI_APP_PURCHASE_BUTTONS_FIX.md  PRD.md  PRECOMMIT_USAGE.md  PYKER_GUIDE.md  QUICK_START.md  RAM_CLEANUP.md  README.md  SPINNER_SYSTEM.md  TECHNOLOGY.md  USAGE_EXAMPLES.md  database_schema_v3.md  issue-70-completion.md  project-structure.md  (+4 more)
docs/deployment/: migration_notes.md
docs/plans/: 2025-02-27-fix-missing-bonus-columns.md  2025-02-27-user-bonus-system.md  2026-02-20-data-visualization-design.md  2026-02-20-data-visualization.md  2026-02-20-eliminate-obsolete-features.md  2026-02-20-issue-76-main-menu.md  (+62 more)
examples/: tron_dealer_api_example.py
migrations/: env.py
miniapp/: __init__.py  router.py  routes_admin.py  routes_common.py  routes_keys.py  routes_payments.py  routes_public.py  routes_subscriptions.py  routes_user.py
modules/: docker.sh  outline.sh  pihole.sh  uninstall.sh  utils.sh  wireguard.sh
scripts/: .shellcheckrc  GITHUB_ACTIONS_CONFIG.md  bot.sh  check_github_config.sh  check_ram_cleanup.sh  check_variables.sh  create_environments.sh  fix_lsp_errors.py  install-caddy.sh  install.sh  merge_to_main.sh  migrate_key_data_limit_10gb_to_5gb.py  migrate_with_backup.sh  ol_server.sh  pen_test_webhook.sh  run_consumption_cron.py  run_migrations.sh  set_gh_variables.sh  set_gh_variables_v2.sh  set_github_variables.sh  setup-duckdns-caddy.sh  setup-pre-commit.sh  setup.sh  setup_android_secrets.sh  setup_android_secrets_manual.sh  test_modules.sh  test_server_metrics.py  update-outline.sh  wg_server.sh
tests/: conftest.py  test_auth_flow.sh  test_mini_app_invoice.py  test_otp_flow.sh
tracks/: tracks.md
utils/: __init__.py  datetime_utils.py  logger.py  message_separators.py  qr_generator.py  sip_prompts.py  spinner.py  spinner_core.py  spinner_decorators.py  spinner_styles.py  telegram_callback_utils.py  telegram_format_utils.py  telegram_message_handler.py  telegram_utils.py  telegram_validation_utils.py
(+416 files in other folders)
