# =============================================================================
# uSipipo VPN - Android APK
# =============================================================================
# Python: >=3.13
# Build System: uv/hatchling
# =============================================================================

[project]
name = "usipipo-android"
version = "1.0.0"
description = "uSipipo VPN Android APK with KivyMD"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "uSipipo Team", email = "dev@usipipo.com"}
]
keywords = ["vpn", "android", "kivy", "kivymd", "mobile"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

# Runtime dependencies
dependencies = [
    # Core
    "kivy==2.3.1",
    "kivymd==1.2.0",

    # Async support for Kivy
    "asynckivy==0.5.0",

    # HTTP
    "httpx==0.27.0",

    # Security
    "cryptography==46.0.5",
    "keyring==24.3.0",
    "certifi==2024.7.4",

    # Validation
    "pydantic==2.10.0",

    # Utilities
    "qrcode==7.4.2",
    "Pillow==11.0.0",
    "loguru==0.7.2",

    # Testing
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# UV Configuration
# =============================================================================

[dependency-groups]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "buildozer",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
